chore: add default image

--- a/webapp/front/front/src/app/components/background-clouds/background-clouds.component.html
+++ b/webapp/front/front/src/app/components/background-clouds/background-clouds.component.html
@@ -1,5 +1,5 @@
-<div class="w-100">
-  <svg style=" position: absolute; top:60%; left:10%" width="618" height="217" viewBox="0 0 618 217" fill="none"
+<div class="w-100 background-container">
+  <svg style=" top:60%; left:10%" width="618" height="217" viewBox="0 0 618 217" fill="none"
        xmlns="http://www.w3.org/2000/svg">
     <path fill-rule="evenodd" clip-rule="evenodd"
           d="M76.493 99.851C79.621 99.851 82.705 100.038 85.735 100.403C98.136 75.843 123.595 59 152.988 59C174.343 59 193.621 67.891 207.324 82.172C219.651 75.564 233.74 71.816 248.705 71.816C297.145 71.816 336.413 111.084 336.413 159.524C336.413 165.136 335.886 170.625 334.879 175.944H0C0.216 133.882 34.38 99.851 76.493 99.851Z"
