--- a/webapp/front/front/src/assets/styles/error.css
+++ b/webapp/front/front/src/assets/styles/error.css
@@ -1,4 +1,3 @@
-
 .error-body {
   margin: 0;
   padding: 0;
@@ -48,6 +47,7 @@
   0% {
     transform: translateX(0);
   }
+
   100% {
     transform: translateX(-50%);
   }
@@ -71,9 +71,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
+  /* Align elements starting from the top */
   align-items: center;
+  padding-top: 10%;
+  /* Push the content slightly down from the top */
 }
+
 
 
 .goback-button {
@@ -105,7 +109,7 @@
 
 
 .error-code {
-  font-size: 80px;
+  font-size: 80px; /* Large and bold for the code */
   font-weight: bold;
   color: var(--primary);
   white-space: nowrap;
@@ -113,6 +117,16 @@
   text-overflow: ellipsis;
   text-align: center;
 }
+
+.error-description {
+  font-size: 20px; /* Smaller than the error code */
+  color: var(--lighttext);
+  max-width: 400px;
+  text-align: center;
+  margin-top: 10px; /* Add spacing below the code */
+  line-height: 1.5; /* Improve readability */
+}
+
 
 .error-message {
   color: var(--lighttext);
