--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -37,7 +37,7 @@
               </script>-->
 
                 <span
-                  class="post-author pt-1 pb-1 pl-1">{{post.user.mail}}<!--<c:out value="${param.postNeighborMail}"/>--></span>
+                  class="post-author pt-1 pb-1 pl-1">{{post.author.mail}}<!--<c:out value="${param.postNeighborMail}"/>--></span>
 
               </div>
 
@@ -50,7 +50,7 @@
             </div>
             <h1 class="post-title">{{post.title}}<!--<c:out value="${param.postTitle}"/>--></h1>
           </div>
-          <p class="post-description mb-2">{{post.description}}<!--<c:out value="${param.postDescription}"/>--></p>
+          <p class="post-description mb-2">{{post.body}}<!--<c:out value="${param.postDescription}"/>--></p>
 
           <!-- <div *ngIf="postImage">
             <div style="display: flex; justify-content: center; align-items: center;">
@@ -72,11 +72,11 @@
         <div class="mt-2 d-flex flex-row justify-content-start align-items-center flex-wrap">
 
           <!-- Assuming postTags is an array property in your component -->
-          <ng-container *ngFor="let tag of post.tags">
+          <!-- <ng-container *ngFor="let tag of post.tags">
             <a routerLink="/" [queryParams]="{tag: tag.name}" class="post-tag static m-l-3 m-r-3">
               {{ tag.name}}
             </a>
-          </ng-container>
+          </ng-container> -->
 
           <!--<c:forEach var="postTag" items="${requestScope.postTags}">
             <a href="${pageContext.request.contextPath}${contextPath}?tag=${postTag.name}"
