--- a/webapp/front/front/src/app/components/user-profile-widget/user-profile-widget.component.html
+++ b/webapp/front/front/src/app/components/user-profile-widget/user-profile-widget.component.html
@@ -1,15 +1,12 @@
-<!-- DONE -->
 <a href="${pageContext.request.contextPath}/profile">
-  <div class="grey-container" style="width: 200px;text-overflow: ellipsis ">
+  <div class="grey-container" style="width: 200px; text-overflow: ellipsis;">
     <div class="row">
       <div class="col-4 f-c-c-c pr-2">
         <div style="display: flex; justify-content: center; align-items: center;">
           <img class="big-profile-picture" style="width: 40px; height: 40px;" [src]="profileImageUrl"
             alt="User profile image" />
-
         </div>
       </div>
-
       <div class="col-8 p-0">
         <div class="column justify-content-center align-items-start">
           <h5 style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100%; font-size: 16px">
@@ -18,7 +15,6 @@
           <h6>{{ loggedUser?.surname }}</h6>
         </div>
       </div>
-
     </div>
   </div>
 </a>
