--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -20,8 +20,9 @@
             <div class="blogpost-author-and-date">
               <div class="f-r-s-c placeholder-glow" style="gap: 3px">
                 <img id="postUserProfilePictureId-{{post.self}}"
-                  [src]="post.author.image || 'assets/images/roundedPlaceholder.png'" class="small-profile-picture"
+                  [src]="authorImageSafeUrl || 'assets/images/roundedPlaceholder.png'" class="small-profile-picture"
                   alt="profile_picture_img" />
+
 
                 <span class="post-author pt-1 pb-1 pl-1">{{post.author.email}}</span>
 
