--- a/webapp/front/front/src/app/components/navbar/navbar.component.html
+++ b/webapp/front/front/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             </svg>
             <div class="f-c-s-s g-0">
               <h3 class="c-background font-size-24">neibo</h3>
-              <h5><!--${loggedUser.neighborhood.name} --></h5>
+              <h5>{{neighborhoodName}}</h5>
             </div>
           </div>
 
