--- a/webapp/front/front/src/app/components/user-profile-widget/user-profile-widget.component.html
+++ b/webapp/front/front/src/app/components/user-profile-widget/user-profile-widget.component.html
@@ -1,18 +1,24 @@
-<a href="${pageContext.request.contextPath}/profile">
-  <div class="grey-container" style="width: 200px; text-overflow: ellipsis;">
+<a routerLink="/profile">
+  <div class="grey-container" style="width: 200px;">
     <div class="row">
       <div class="col-4 f-c-c-c pr-2">
         <div style="display: flex; justify-content: center; align-items: center;">
-          <img class="big-profile-picture" style="width: 40px; height: 40px;" [src]="profileImageUrl"
+          <img class="big-profile-picture" style="width: 40px; height: 40px;" [src]="profileImageSafeUrl"
             alt="User profile image" />
         </div>
       </div>
       <div class="col-8 p-0">
         <div class="column justify-content-center align-items-start">
-          <h5 style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100%; font-size: 16px">
-            {{ loggedUser?.name }}
+          <!-- Name with ellipsis -->
+          <h5 class="text-ellipsis"
+            style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100%; font-size: 16px">
+            {{ currentUser.name }}
           </h5>
-          <h6>{{ loggedUser?.surname }}</h6>
+          <!-- Surname with ellipsis -->
+          <h6 class="text-ellipsis"
+            style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 80%; font-size: 14px">
+            {{ currentUser.surname }}
+          </h6>
         </div>
       </div>
     </div>
