--- a/webapp/front/front/src/app/components/post-card/post-card.component.html
+++ b/webapp/front/front/src/app/components/post-card/post-card.component.html
@@ -25,7 +25,8 @@
         </div>
 
         <!-- Image section -->
-        <div *ngIf="postImageSafeUrl" style="display: flex; justify-content: center; align-items: center;">
+        <div *ngIf="postImageSafeUrl && !isPostImageFallback"
+            style="display: flex; justify-content: center; align-items: center;">
             <img [src]="postImageSafeUrl" class="blogpost-image"
                 style="max-width: 100%; max-height: 100vh; border-radius: 5px; height: 300px" alt="post_image" />
         </div>
