--- a/webapp/front/front/src/app/modules/feed/feed.component.html
+++ b/webapp/front/front/src/app/modules/feed/feed.component.html
@@ -1,4 +1,3 @@
-
 <div style="position: absolute; width: 100%; height: 100%; top:0; left:0; z-index: 0">
   <app-background-clouds></app-background-clouds>
 
@@ -16,26 +15,29 @@
         <app-upper-feed-buttons></app-upper-feed-buttons>
 
         <div id="placeholder-posts-container">
-            <!--<c:forEach begin="1" end="10" var="index">
+          <!--<c:forEach begin="1" end="10" var="index">
               <%@ include file="/WEB-INF/jsp/components/widgets/placeholderBlogpost.jsp" %>
             </c:forEach>-->
         </div>
-          <div id="actual-posts-container">
-            <ng-container *ngIf="postList && postList.length > 0; else noPostsFound">
-              <!-- Include the page selector -->
+        <div id="actual-posts-container">
+          <ng-container *ngIf="postList && postList.length > 0; else noPostsFound">
+            <!-- Include the page selector -->
 
-              <div *ngFor="let post of postList">
-                <blogpost [post]="post"></blogpost>
-              </div>
+            <div *ngFor="let post of postList">
+              <blogpost [post]="post"></blogpost>
+            </div>
 
-            </ng-container>
-            <ng-template #noPostsFound>
-              <div class="no-posts-found">
-                <i class="circle-icon fa-solid fa-magnifying-glass" style="color: var(--text)"></i>
-                <span i18n>Posts not found</span>
-              </div>
-            </ng-template>
-           <!-- <c:choose>
+            <app-paginator [totalPages]="totalPages" [currentPage]="currentPage" [pageSize]="pageSize"
+              [isMarketplace]="false" (pageChange)="onPageChange($event)"></app-paginator>
+
+          </ng-container>
+          <ng-template #noPostsFound>
+            <div class="no-posts-found">
+              <i class="circle-icon fa-solid fa-magnifying-glass" style="color: var(--text)"></i>
+              <span i18n>Posts not found</span>
+            </div>
+          </ng-template>
+          <!-- <c:choose>
               <c:when test="${empty postList}">
                 <div class="no-posts-found">
                   <i class="circle-icon fa-solid fa-magnifying-glass" style="color:var(&#45;&#45;text)"></i>
@@ -76,21 +78,21 @@
                 </c:if>
               </c:otherwise>
             </c:choose>-->
-          </div>
-          <script>
-            function showPostsAfterDelay() {
-              document.getElementById('placeholder-posts-container').style.display = 'none';
-              document.getElementById('actual-posts-container').style.display = 'block';
-            }
+        </div>
+        <script>
+          function showPostsAfterDelay() {
+            document.getElementById('placeholder-posts-container').style.display = 'none';
+            document.getElementById('actual-posts-container').style.display = 'block';
+          }
 
-            setTimeout(showPostsAfterDelay, 300);
+          setTimeout(showPostsAfterDelay, 300);
 
-          </script>
+        </script>
 
       </div>
 
       <div class="column-right">
-
+        <app-right-column></app-right-column>
         <!--<%@ include file="/WEB-INF/jsp/components/displays/rightColumn.jsp" %>-->
       </div>
 
