--- a/webapp/front/front/src/assets/styles/calendarWidget.css
+++ b/webapp/front/front/src/assets/styles/calendarWidget.css
@@ -6,7 +6,11 @@
   width: 100%;
 }
 
-.wrapper {
+
+
+
+.wrapper-widget {
+  /* padding: 100px; TODO esto lo agranda bien pero hay que ver como hacer bien */
   padding: 15px;
   display: flex;
   flex-direction: column;
@@ -53,7 +57,8 @@
       font-size: 1.5rem;
       user-select: none;
       border-radius: 50%;
-      display: flex; /* Center the content horizontally and vertically */
+      display: flex;
+      /* Center the content horizontally and vertically */
       justify-content: center;
       align-items: center;
 
@@ -64,7 +69,7 @@
 }
 
 
-.calendar {
+.calendar-widget {
   padding: 0;
   transition: all 0.3s ease-in-out;
 
@@ -72,9 +77,12 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    justify-content: center; /* Center the weeks and days horizontally */
-    align-items: center; /* Center the weeks and days vertically */
-    padding: 0; /* Remove any padding */
+    justify-content: center;
+    /* Center the weeks and days horizontally */
+    align-items: center;
+    /* Center the weeks and days vertically */
+    padding: 0;
+    /* Remove any padding */
 
   }
 
@@ -82,13 +90,16 @@
     color: var(--text);
     width: calc(100% / 7);
     font-size: 0.7rem;
-    text-align: center; /* Center the text within each day */
-    padding: 5px; /* Add some padding to space out the days */
+    text-align: center;
+    /* Center the text within each day */
+    padding: 5px;
+    /* Add some padding to space out the days */
   }
 
   & .weeks {
     margin-bottom: -5px;
-    width: 100%; /* Make the weeks take up the full width of the container */
+    width: 100%;
+    /* Make the weeks take up the full width of the container */
 
     & li {
       font-weight: 550;
@@ -105,7 +116,8 @@
     transition: all 0.3s ease-in-out;
 
     &.today {
-      color: var(--always-background); /* Set the text color to white */
+      color: var(--always-background);
+      /* Set the text color to white */
 
       &::before {
         background: var(--primary);
@@ -119,7 +131,8 @@
     }
 
     &.event {
-      color: var(--always-background); /* Set the text color to white */
+      color: var(--always-background);
+      /* Set the text color to white */
 
       &::before {
 
@@ -128,7 +141,8 @@
 
     }
 
-    &.inactive { /*dias posteriores al mes*/
+    &.inactive {
+      /*dias posteriores al mes*/
       color: var(--lighttext);
     }
 
@@ -144,8 +158,10 @@
       content: "";
       left: 50%;
       top: 50%;
-      height: 22px; /* Reduce the height and width to make the circle smaller */
-      width: 22px; /* Reduce the height and width to make the circle smaller */
+      height: 22px;
+      /* Reduce the height and width to make the circle smaller */
+      width: 22px;
+      /* Reduce the height and width to make the circle smaller */
       z-index: -1;
       border-radius: 50%;
       transform: translate(-50%, -50%);
