feat: revive post status and channel changing buttons

--- a/webapp/front/front/src/app/components/post-detail/post-detail.component.html
+++ b/webapp/front/front/src/app/components/post-detail/post-detail.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="column column-right">
-        <!-- <app-calendar-widget></app-calendar-widget> -->
+        <app-calendar-widget></app-calendar-widget>
       </div>
     </div>
   </div>
