--- a/webapp/front/front/src/app/components/left-column/left-column.component.html
+++ b/webapp/front/front/src/app/components/left-column/left-column.component.html
@@ -1,4 +1,3 @@
-
 <div class="left-column-container">
 
   <div class="f-c-c-c sticky">
@@ -26,64 +25,53 @@
         </div>
       </c:when>
       <c:otherwise>-->
-        <div class="left-box">
-          <div class="f-c-c-c first">
-            <a id="announcementsButton"
-               routerLink="/feed"  [queryParams]="{channel: 'Announcements'}"
-               class="cool-left-button f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Announcements' }">
-              <i class="fas fa-bullhorn"></i>
-              <span i18n>Announcements</span>
-            </a>
-            <a id="feedButton" routerLink="/feed"
-               class="cool-left-button  f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Feed' }">
-              <i class="fas fa-comments"></i>
-              <span i18n>Feed</span>
-            </a>
-            <a id="complaintsButton" routerLink="/feed" [queryParams]="{channel: 'Complaints'}"
-               class="cool-left-button f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Complaints' }">
-              <i class="fas fa-envelope"></i>
-              <span i18n>Complaints</span>
-            </a>
-        </div>
-            <div class="f-c-c-c second">
-            <div class="divider"></div>
-            <a id="marketplaceButton" routerLink="/marketplace"
-               class="cool-left-button lila f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Marketplace' }">
-              <i class="fa-solid fa-store"></i>
-              <span i18n>Marketplace</span>
-            </a>
-            <a id="servicesButton" routerLink="/services"
-               class="cool-left-button f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Services' }">
-              <i class="fa-solid fa-handshake-angle"></i>
-              <span i18n>Services</span>
-            </a>
-            <a id="reservationsButton" routerLink="/reservations"
-               class="cool-left-button f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Reservations' }">
-              <i class="fas fa-calendar-days"></i>
-              <span i18n>Reservations</span>
-            </a>
-            <a id="informationButton" routerLink="/information"
-               class="cool-left-button f-r-sb-c"
-               [ngClass]="{ 'active': channelClass == 'Information' }">
-              <i class="fa-solid fa-circle-info"></i>
-              <span i18n>Information</span>
-            </a>
-        </div>
+    <div class="left-box">
+      <div class="f-c-c-c first">
+        <a id="announcementsButton" (click)="changeChannelToAnnouncements()" class="cool-left-button f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Announcements' }">
+          <i class="fas fa-bullhorn"></i>
+          <span i18n>Announcements</span>
+        </a>
+        <a id="feedButton" (click)="changeChannelToFeed()" class="cool-left-button f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Feed' }">
+          <i class="fas fa-comments"></i>
+          <span i18n>Feed</span>
+        </a>
+        <a id="complaintsButton" (click)="changeChannelToComplaints()" class="cool-left-button f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Complaints' }">
+          <i class="fas fa-envelope"></i>
+          <span i18n>Complaints</span>
+        </a>
+      </div>
+      <div class="f-c-c-c second">
+        <div class="divider"></div>
+        <a id="marketplaceButton" routerLink="/marketplace" class="cool-left-button lila f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Marketplace' }">
+          <i class="fa-solid fa-store"></i>
+          <span i18n>Marketplace</span>
+        </a>
+        <a id="servicesButton" routerLink="/services" class="cool-left-button f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Services' }">
+          <i class="fa-solid fa-handshake-angle"></i>
+          <span i18n>Services</span>
+        </a>
+        <a id="reservationsButton" routerLink="/reservations" class="cool-left-button f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Reservations' }">
+          <i class="fas fa-calendar-days"></i>
+          <span i18n>Reservations</span>
+        </a>
+        <a id="informationButton" routerLink="/information" class="cool-left-button f-r-sb-c"
+          [ngClass]="{ 'active': channelClass == 'Information' }">
+          <i class="fa-solid fa-circle-info"></i>
+          <span i18n>Information</span>
+        </a>
+      </div>
+    </div>
 
-        </div>
-
-      <!--</c:otherwise>
+    <!--</c:otherwise>
     </c:choose>
 -->
 
   </div>
 
 </div>
-
-
