--- a/webapp/front/front/src/app/components/upper-feed-buttons/upper-feed-buttons.component.html
+++ b/webapp/front/front/src/app/components/upper-feed-buttons/upper-feed-buttons.component.html
@@ -15,7 +15,7 @@
     </a>
 
     <!-- Hot Button -->
-    <a (click)="changeStatusToHot()" class="cool-feed-button rounded" [ngClass]="{ 'active': statusClass === 'Hot' }">
+    <a (click)="changeStatusToHot()" class="coolest-button " [ngClass]="{ 'active': statusClass === 'Hot' }">
       <i class="fa-solid fa-fire ml-1"></i>
       <span i18n>Hot</span>
     </a>
