--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -2,18 +2,24 @@
   <div class="container">
     <div class=" row ">
       <div class="col-md-1 grey-bg col-md-pull-1">
+
+        <!-- Like buton -->
         <div class="f-c-c-c mt-3" style="gap: 1px">
-          <span id="like-button-{{post.self}}" class="like-button" [attr.data-post-self]="post.self">
+          <span id="like-button-{{post.self}}" class="like-button" [class.liked]="hasLiked" (click)="toggleLike()"
+            [attr.data-post-self]="post.self">
             <i class="fa-solid fa-thumbs-up"></i>
           </span>
           <span class="like-count c-light-text" id="like-count-{{post.self}}" [attr.data-like-count]="post.likeCount">
             {{post.likeCount}}
           </span>
         </div>
+
+
+
       </div>
       <div class="col-md-11 pt-3 pb-3 pr-3 col-md-push-11">
-        <!-- VUELA ${pageContext.request.contextPath}/posts/<c:out value="${param.postID}" />-->
-        <a [routerLink]="['/post', post.self]" style="text-decoration: none;">
+        <a [routerLink]="['/post', post.self]" [queryParams]="{ SPAInChannel: this.SPAInChannel}"
+          style="text-decoration: none;">
           <div class="post-header">
             <div class="blogpost-author-and-date">
               <div class="f-r-s-c placeholder-glow" style="gap: 3px">
@@ -49,10 +55,11 @@
 
 
           <ng-container *ngFor="let tag of tags">
-            <a routerLink="/" [queryParams]="{tag: tag.name}" class="post-tag static m-l-3 m-r-3">
-              {{ tag.name}}
+            <a class="post-tag static m-l-3 m-r-3" (click)="filterByTag(tag.self)">
+              {{ tag.name }}
             </a>
           </ng-container>
+
 
           <!--<c:forEach var="postTag" items="${requestScope.postTags}">
             <a href="${pageContext.request.contextPath}${contextPath}?tag=${postTag.name}"
