--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -45,7 +45,7 @@
 
           <div *ngIf="postImageSafeUrl && !isPostImageFallback">
             <div style="display: flex; justify-content: center; align-items: center;">
-              <img [src]="postImageSafeUrl" alt="Post Image" />
+              <img [src]="postImageSafeUrl" class="blogpost-image" alt="Post Image" />
             </div>
           </div>
 
