feat: activate user detail, fix events

--- a/webapp/front/front/src/app/components/navbar/navbar.component.html
+++ b/webapp/front/front/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="container-xl">
       <div class="d-flex justify-content-between align-items-center w-100">
         <!--href="${pageContext.request.contextPath}/${loggedUser.role == 'WORKER' ? 'services' : ''}"-->
-        <a class="navbar-brand" routerLink="/">
+        <a class="navbar-brand" routerLink="/posts">
           <div class="f-r-c-c">
             <svg class="svg-logo" width="55" height="54" viewBox="0 0 711 676" fill="none"
               xmlns="http://www.w3.org/2000/svg">
