--- a/webapp/front/front/src/app/components/calendar-box/calendar-box.component.html
+++ b/webapp/front/front/src/app/components/calendar-box/calendar-box.component.html
@@ -18,9 +18,12 @@
                     </ul>
                     <ul class="days">
                         <li *ngFor="let day of days" [class.inactive]="day.inactive" [class.today]="day.today"
-                            [class.event]="day.event && !day.today" (click)="navigateToDay(day)">
+                            [class.event]="day.event && !day.today"
+                            [class.selected]="selectedDay && day.date === selectedDay.date && day.month === selectedDay.month && day.year === selectedDay.year"
+                            (click)="navigateToDay(day)">
                             {{ day.date }}
                         </li>
+
                     </ul>
                 </div>
             </div>
