--- a/webapp/front/front/src/app/components/calendar-events-column/calendar-events-column.component.html
+++ b/webapp/front/front/src/app/components/calendar-events-column/calendar-events-column.component.html
@@ -1,18 +1,54 @@
 <div class="w-100">
+    <!-- Placeholder for loading state -->
     <div id="placeholder-events" *ngIf="isLoading">
         <div *ngFor="let index of placeholders">
-            <!-- Include your placeholder component or HTML here -->
-            <!-- <app-placeholder-blogpost></app-placeholder-blogpost> -->
+            <div class="placeholder-blogpost p-3">
+                <div class="placeholder col-12 mb-2"></div>
+                <div class="placeholder col-8 mb-2"></div>
+                <div class="placeholder col-6"></div>
+            </div>
         </div>
     </div>
 
+    <!-- Actual events -->
     <div id="actual-events" *ngIf="!isLoading">
         <div *ngIf="events.length === 0" class="no-posts-found">
             <i class="circle-icon fa-solid fa-magnifying-glass"></i>
             No Events Found
         </div>
-        <div *ngFor="let event of events">
-            <app-calendar-event [event]="event" [isAdmin]="isAdmin" [selectedDate]="selectedDate"></app-calendar-event>
+
+        <div *ngFor="let event of events" class="blogpost p-3 ">
+
+            <div class="row w-100">
+                <div class="col-{{ isAdmin ? '10' : '12' }}" style="overflow: hidden; text-overflow: ellipsis;">
+                    <a [routerLink]="['/events', event.self]">
+                        <div>{{ event.name }}</div>
+                    </a>
+                </div>
+                <div class="col-2" *ngIf="isAdmin">
+                    <span class="admin-link">
+                        <a [routerLink]="['/admin/delete-event', event.self]"
+                            [queryParams]="{ date: (selectedDate | date:'yyyy-MM-dd') }" class="btn btn-link">
+                            <i class="fas fa-trash" style="color: var(--error);"></i>
+                        </a>
+                    </span>
+                </div>
+            </div>
+
+            <a [routerLink]="['/events', event.self]">
+                <p style="font-size: 12px; font-weight: normal">
+                    {{ event.startTime }} - {{ event.endTime }}
+                </p>
+                <p style="font-size: 12px; font-weight: normal">{{ event.duration }} Minutes</p>
+                <div class="divider"></div>
+                <div class="postcard-description m-t-40" style="overflow: clip">
+                    {{ event.description }}
+                </div>
+            </a>
+
         </div>
+
+        <app-paginator [totalPages]="totalPages" [currentPage]="currentPage" (pageChange)="onPageChange($event)">
+        </app-paginator>
     </div>
 </div>
