--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -3,7 +3,20 @@ GLOBAL CSS VARIABLES AND STYLES THAT SHOULD BE USED IN ALL PAGES
 */
 
 
-body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button, span {
+body,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label,
+input,
+select,
+textarea,
+button,
+span {
   font: 14px/1 'IBM Plex Sans', sans-serif;
   font-weight: bold;
 }
@@ -132,12 +145,15 @@ html {
 
 
 a {
-  color: inherit; /* Inherit the color from the parent element */
-  text-decoration: none; /* Remove underlines */
+  color: inherit;
+  /* Inherit the color from the parent element */
+  text-decoration: none;
+  /* Remove underlines */
 }
 
 a:hover {
-  text-decoration: none; /* Remove underlines */
+  text-decoration: none;
+  /* Remove underlines */
   color: inherit;
 }
 
@@ -209,17 +225,18 @@ input[type="checkbox"] {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
-  &::before{
+  &::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 110%;
     bottom: -2px;
     left: 0;
-    -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    -webkit-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    -o-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
   }
+
   &::before {
     position: absolute;
     content: '';
@@ -244,7 +261,7 @@ input[type="checkbox"] {
       opacity: 1;
     }
 
-    ~ label::before {
+    ~label::before {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     }
   }
@@ -276,8 +293,7 @@ label {
 }
 
 button:focus-visible,
-button:focus-within
-button:focus {
+button:focus-within button:focus {
   outline: 0;
 }
 
@@ -293,6 +309,7 @@ p {
   align-items: center;
   gap: 1rem;
 }
+
 .f-c-c-s {
   display: flex;
   flex-direction: column;
@@ -300,6 +317,7 @@ p {
   align-items: start;
   gap: 1rem;
 }
+
 .f-c-s-c {
   display: flex;
   flex-direction: column;
@@ -316,15 +334,16 @@ p {
   gap: 1rem;
 }
 
-.g-0{
-  gap:0 !important;
+.g-0 {
+  gap: 0 !important;
 }
 
-.g-1{
-  gap:1rem !important;
+.g-1 {
+  gap: 1rem !important;
 }
-.g-2{
-  gap:2rem !important;
+
+.g-2 {
+  gap: 2rem !important;
 }
 
 .f-c-sb-c {
@@ -350,6 +369,7 @@ p {
   align-items: center;
   gap: 1rem;
 }
+
 .f-r-sb-s {
   display: flex;
   flex-direction: row;
@@ -365,6 +385,7 @@ p {
   align-items: center;
   gap: 1rem;
 }
+
 .f-r-c-e {
   display: flex;
   flex-direction: row;
@@ -372,6 +393,7 @@ p {
   align-items: end;
   gap: 1rem;
 }
+
 .f-r-s-c {
   display: flex;
   flex-direction: row;
@@ -379,6 +401,7 @@ p {
   align-items: center;
   gap: 1rem;
 }
+
 .f-r-s-s {
   display: flex;
   flex-direction: row;
@@ -437,6 +460,7 @@ p {
   0% {
     transform: translate3d(-100%, 0, 0);
   }
+
   100% {
     transform: translate3d(100%, 0, 0);
   }
@@ -463,20 +487,22 @@ p {
 }
 
 .font-size-22 {
-  font-size: 22px  !important;
+  font-size: 22px !important;
 }
 
 
 .font-size-24 {
-  font-size: 24px  !important;
+  font-size: 24px !important;
 }
 
 .font-size-30 {
   font-size: 30px !important;
 }
+
 .font-size-26 {
   font-size: 26px !important;
 }
+
 .font-size-20 {
   font-size: 20px !important;
 }
@@ -497,15 +523,10 @@ p {
   cursor: pointer;
 }
 
-.fixed{
+.fixed {
   position: fixed;
 }
 
-.g-05{
+.g-05 {
   gap: 0.5em;
 }
-
-
-
-
-
