fix toast service

--- a/webapp/front/front/src/app/components/success-toast/success-toast.component.html
+++ b/webapp/front/front/src/app/components/success-toast/success-toast.component.html
@@ -1,4 +1,4 @@
-<div class="toast" *ngIf="visible" [ngClass]="type">
+<div class="toast" [ngClass]="toastClasses">
     <div class="toast-content">
         <span class="dot"></span>
         <span class="message">{{ message }}</span>
